--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-orjson==3.10.7
-redis==5.0.8
-fastapi==0.112.2
+fastapi_app@git+https://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@github.com/vadikko2/fastapi-app@24.31.03
+orjson==3.9.15
+redis==5.0.3
+fastapi==0.109.2
 pydantic==2.8.2
 pydantic-settings==2.2.1
