Добавлена поддержка работы с чатами

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi_app@git+https://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@github.com/vadikko2/fastapi-app@24.31.03
+python-cqrs==0.0.18
 orjson==3.9.15
 redis==5.0.3
 fastapi==0.109.2
