--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     container_name: api
     volumes:
       - .:/core
+    environment:
+      - REDIS_URL=redis://redis_dev:6379
     ports:
       - 80:80
     restart: always
