--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi_app@git+https://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@github.com/vadikko2/fastapi-app@24.31.03
+fastapi_app@git+https://github.com/vadikko2/fastapi-app@24.31.03
 python-cqrs==0.0.18
 orjson==3.9.15
 redis==5.0.3
