--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 GITHUB_TOKEN=<github_token>
+# REDIS
 REDIS_HOSTNAME=redis-dev
 REDIS_PORT=6379
 REDIS_DATABASE=0
 REDIS_USER=default
 REDIS_PASSWORD=
+# S3
+S3_ENDPOINT_URL=
+S3_REGION_NAME=
+S3_BUCKET_NAME=
+S3_PATH_PREFIX=messenger-attachments
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
