--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 fastapi_app@git+https://github.com/vadikko2/fastapi-app@0.0.2
-python-cqrs==0.0.18
+python-cqrs==0.1.2
 orjson==3.9.15
 redis==5.0.3
 fastapi==0.109.2
 pydantic==2.8.2
 pydantic-settings==2.2.1
+boto3==1.34.131
