--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,22 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        GITHUB_TOKEN: ${GITHUB_TOKEN}
     container_name: api
     volumes:
       - .:/core
     environment:
-      - REDIS_URL=redis://redis_dev:6379
-      - GITHUB_TOKEN=${GITHUB_TOKEN}
+      - REDIS_HOSTNAME=${REDIS_HOSTNAME}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_DATABASE=${REDIS_DATABASE}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - S3_ENDPOINT_URL=${S3_ENDPOINT_URL}
+      - S3_REGION_NAME=${S3_REGION_NAME}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - S3_PATH_PREFIX=${S3_PATH_PREFIX}
+      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
+      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
     ports:
       - 80:80
+      - 443:443
     restart: always
