--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,10 +41,10 @@ repos:
   - id: toml-sort-fix
   repo: https://github.com/pappasam/toml-sort
   rev: v0.23.1
-- hooks:
-  - id: pycln
-  repo: https://github.com/hadialqattan/pycln
-  rev: v2.4.0
+#- hooks:
+#  - id: pycln
+#  repo: https://github.com/hadialqattan/pycln
+#  rev: v2.4.0
 - hooks:
   - id: upgrade-type-hints
   repo: https://github.com/sondrelg/pep585-upgrade
