Добавил новые метод работы с voice-ами

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi_app@git+https://github.com/vadikko2/fastapi-app@0.0.2
-python-cqrs==2.5.0
+python-cqrs==3.0.0
 orjson==3.9.15
 redis==5.0.3
 fastapi==0.109.2
@@ -7,4 +7,5 @@ pydantic==2.8.2
 pydantic-settings==2.2.1
 pillow==10.4.0
 boto3==1.34.131
+pydub==0.25.1
 python-socketio[asyncio_client]==5.12.1
