Добавил авторизацию по JWT в мессенджер

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ S3_SECRET_ACCESS_KEY=
 # APP
 APP_DEBUG=True
 APP_TMP_DIR=./tmp
+
+# IAM
+VALIDATE_TOKEN_ENDPOINT=https://iam.kupidon-dev.ru/api/v1/token/validate
